--- a/index.html
+++ b/index.html
@@ -151,16 +151,66 @@
 
         <div class="saidbar overflow-hidden">
           <ul>
-            <li class="nav-item"><a class="nav-link my-3 fs-6" href="#">Navigation-1</a></li>
-            <li class="nav-item"><a class="nav-link my-3 fs-6" href="#">Navigation-2</a></li>
-            <li class="nav-item"><a class="nav-link my-3 fs-6" href="#">Navigation-3</a></li>
-            <li class="nav-item"><a class="nav-link my-3 fs-6" href="#">Navigation-4</a></li>
-            <li class="nav-item"><a class="nav-link my-3 fs-6" href="#">Navigation-5</a></li>
-            <li class="nav-item"><a class="nav-link my-3 fs-6" href="#">Navigation-6</a></li>
-            <li class="nav-item"><a class="nav-link my-3 fs-6" href="#">Navigation-7</a></li>
-            <li class="nav-item"><a class="nav-link my-3 fs-6" href="#">Navigation-8</a></li>
-            <li class="nav-item"><a class="nav-link my-3 fs-6" href="#">Navigation-9</a></li>
-            <li class="nav-item"><a class="nav-link my-3 fs-6" href="#">Navigation-10</a></li>
+            <li class="nav-item py-1">
+              <a class="nav-link my-3 fs-6" href="#">
+
+              </a>
+            </li>
+            <li class="nav-item py-1">
+              <a class="nav-link my-3 fs-6" href="#">
+
+              </a>
+            </li>
+            <li class="nav-item py-1">
+              <a class="nav-link my-3 fs-6" href="#">
+
+              </a>
+            </li>
+            <li class="nav-item py-1">
+              <a class="nav-link my-3 fs-6" href="#">
+
+              </a>
+            </li>
+            <li class="nav-item py-1">
+              <a class="nav-link my-3 fs-6" href="#">
+
+              </a>
+            </li>
+            <li class="nav-item py-1">
+              <a class="nav-link my-3 fs-6" href="#">
+
+              </a>
+            </li>
+            <li class="nav-item py-1">
+              <a class="nav-link my-3 fs-6" href="#">
+
+              </a>
+            </li>
+            <li class="nav-item py-1">
+              <a class="nav-link my-3 fs-6" href="#">
+
+              </a>
+            </li>
+            <li class="nav-item py-1">
+              <a class="nav-link my-3 fs-6" href="#">
+
+              </a>
+            </li>
+            <li class="nav-item py-1">
+              <a class="nav-link my-3 fs-6" href="#">
+
+              </a>
+            </li>
+            <li class="nav-item py-1">
+              <a class="nav-link my-3 fs-6" href="#">
+
+              </a>
+            </li>
+            <li class="nav-item py-1">
+              <a class="nav-link my-3 fs-6" href="#">
+
+              </a>
+            </li>
           </ul>
         </div>
 
