--- a/index.html
+++ b/index.html
@@ -150,65 +150,30 @@
       <div class="mainRow d-flex">
 
         <div class="saidbar overflow-hidden">
-          <ul>
-            <li class="nav-item py-1">
-              <a class="nav-link my-3 fs-6" href="#">
-
+          <ul class="px-2">
+            <li class="saidbar_title nav-item">
+              <a class="nav-link" href="#">
+                <span>Personal</span>
               </a>
             </li>
-            <li class="nav-item py-1">
-              <a class="nav-link my-3 fs-6" href="#">
-
+            <li class="nav-item active">
+              <a class="nav-link fs-6" href="#">
+                <i class="fa-solid fa-gauge"></i>
               </a>
             </li>
-            <li class="nav-item py-1">
-              <a class="nav-link my-3 fs-6" href="#">
-
+            <li class="nav-item">
+              <a class="nav-link fs-6" href="#">
+                <i class="fa-solid fa-list"></i>
               </a>
             </li>
-            <li class="nav-item py-1">
-              <a class="nav-link my-3 fs-6" href="#">
-
+            <li class="nav-item">
+              <a class="nav-link fs-6" href="#">
+                <i class="fa-solid fa-envelope"></i>
               </a>
             </li>
-            <li class="nav-item py-1">
-              <a class="nav-link my-3 fs-6" href="#">
-
-              </a>
-            </li>
-            <li class="nav-item py-1">
-              <a class="nav-link my-3 fs-6" href="#">
-
-              </a>
-            </li>
-            <li class="nav-item py-1">
-              <a class="nav-link my-3 fs-6" href="#">
-
-              </a>
-            </li>
-            <li class="nav-item py-1">
-              <a class="nav-link my-3 fs-6" href="#">
-
-              </a>
-            </li>
-            <li class="nav-item py-1">
-              <a class="nav-link my-3 fs-6" href="#">
-
-              </a>
-            </li>
-            <li class="nav-item py-1">
-              <a class="nav-link my-3 fs-6" href="#">
-
-              </a>
-            </li>
-            <li class="nav-item py-1">
-              <a class="nav-link my-3 fs-6" href="#">
-
-              </a>
-            </li>
-            <li class="nav-item py-1">
-              <a class="nav-link my-3 fs-6" href="#">
-
+            <li class="nav-item">
+              <a class="nav-link fs-6" href="#">
+                <i class="fa-solid fa-laptop"></i>
               </a>
             </li>
           </ul>
@@ -531,6 +496,9 @@
 
 
 
+
+  <!-- Icons -->
+  <script src="./library/js/icons.js" crossorigin="anonymous"></script>
 
   <!-- jQuery -->
   <script src="./library/js/jquery-3.7.0.js"></script>
