--- a/index.html
+++ b/index.html
@@ -151,29 +151,102 @@
 
         <div class="saidbar overflow-hidden">
           <ul class="px-2">
-            <li class="saidbar_title nav-item">
+            <li class="saidbar_title">
               <a class="nav-link" href="#">
-                <span>Personal</span>
+                <span>PERSONAL</span>
               </a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link fs-6" href="#">
-                <i class="fa-solid fa-gauge"></i>
+              <a class="nav-link d-flex align-items-center justify-content-between" href="#">
+                <div class="d-flex align-items-center">
+                  <div class="icons">
+                    <i class="fa-solid fa-gauge"></i>
+                  </div>
+                  <span class="ps-4">Dashboard</span>
+                </div>
+                <i class="fa-solid fa-angle-right min_icon"></i>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fs-6" href="#">
-                <i class="fa-solid fa-list"></i>
+              <a class="nav-link d-flex align-items-center justify-content-between" href="#">
+                <div class="d-flex align-items-center">
+                  <div class="icons">
+                    <i class="fa-solid fa-list"></i>
+                  </div>
+                  <span class="ps-4">App</span>
+                </div>
+                <i class="fa-solid fa-angle-right min_icon"></i>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fs-6" href="#">
-                <i class="fa-solid fa-envelope"></i>
+              <a class="nav-link d-flex align-items-center justify-content-between" href="#">
+                <div class="d-flex align-items-center">
+                  <div class="icons">
+                    <i class="fa-solid fa-envelope"></i>
+                  </div>
+                  <span class="ps-4">Mailbox</span>
+                </div>
+                <i class="fa-solid fa-angle-right min_icon"></i>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fs-6" href="#">
-                <i class="fa-solid fa-laptop"></i>
+              <a class="nav-link d-flex align-items-center justify-content-between" href="#">
+                <div class="d-flex align-items-center">
+                  <div class="icons">
+                    <i class="fa-solid fa-laptop fs-6"></i>
+                  </div>
+                  <span class="ps-4">UI Elements</span>
+                </div>
+                <i class="fa-solid fa-angle-right min_icon"></i>
+              </a>
+            </li>
+            <li class="saidbar_title">
+              <a class="nav-link" href="#">
+                <span>FORMS, TABLE & LAYOUTS</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link d-flex align-items-center justify-content-between" href="#">
+                <div class="d-flex align-items-center">
+                  <div class="icons">
+                    <i class="fa-solid fa-bars"></i>
+                  </div>
+                  <span class="ps-4">Widgets</span>
+                </div>
+                <i class="fa-solid fa-angle-right min_icon"></i>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link d-flex align-items-center justify-content-between" href="#">
+                <div class="d-flex align-items-center">
+                  <div class="icons">
+                    <i class="fa-solid fa-clone"></i>
+                  </div>
+                  <span class="ps-4">Layout Options</span>
+                </div>
+                <i class="fa-solid fa-angle-right min_icon"></i>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link d-flex align-items-center justify-content-between" href="#">
+                <div class="d-flex align-items-center">
+                  <div class="icons">
+                    <i class="fa-solid fa-box"></i>
+                  </div>
+                  <span class="ps-4">Box</span>
+                </div>
+                <i class="fa-solid fa-angle-right min_icon"></i>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link d-flex align-items-center justify-content-between" href="#">
+                <div class="d-flex align-items-center">
+                  <div class="icons">
+                    <i class="fa-solid fa-chart-pie"></i>
+                  </div>
+                  <span class="ps-4">Charts</span>
+                </div>
+                <i class="fa-solid fa-angle-right min_icon"></i>
               </a>
             </li>
           </ul>
