--- a/index.html
+++ b/index.html
@@ -150,13 +150,13 @@
       <div class="mainRow d-flex">
 
         <div class="saidbar overflow-hidden">
-          <ul class="px-2">
+          <ul class="px-2 saidbar_list">
             <li class="saidbar_title">
               <a class="nav-link" href="#">
                 <span>PERSONAL</span>
               </a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item active second_list">
               <a class="nav-link d-flex align-items-center justify-content-between" href="#">
                 <div class="d-flex align-items-center">
                   <div class="icons">
