--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   <img src="./assets/icons/magnifying-glass-solid.svg" alt="">
                 </a>
                 <div class="searchForm">
-                  <input type="text" class="form-control searchEnter" placeholder="Search & Enter">
+                  <input type="text" class="searchEnter" placeholder="Search & Enter">
                   <img class="close" src="./assets/icons/xmark.svg" alt="xmark">
                 </div>
               </li>
