--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
           <div class="parent">
             <div class="contentWrapper bg-white m-4">
               <div class="title row w-100 m-0">
-                <div class="col-12 py-3 ps-2 fs-5 border-bottom">Content name</div>
+                <div class="col-12 py-3 ps-2 fs-5 border-bottom text-center">Content name</div>
               </div>
 
               <div class="filter_wrapper">
@@ -276,12 +276,16 @@
                       <img class="calendar" src="./assets/imgs/calendar.png" alt="calendar">
                     </div>
                   </div>
-                  <button class="btn_refresh">Refresh <img src="./assets/icons/refresh.svg" alt="refresh"></button>
+                  <button class="btn_refresh rounded">
+                    <img src="./assets/icons/refresh.svg" alt="refresh">
+                  </button>
                 </div>
 
                 <div class="filter btn_wrapper">
                   <div class="date me-0">
-                    <button class="btn_search">Qo'shimcha filter</button>
+                    <button class="btn_search rounded">
+                      <img src="./assets/icons/filter-svgrepo.svg" alt="Filter">
+                    </button>
                   </div>
                 </div>
               </div>
@@ -502,7 +506,7 @@
 
   <!-- Qo'shimcha filter modal -->
   <div class="filter_modal">
-    <div class="modal_box">
+    <div class="modal_box rounded">
       <div class="close_btn">
         <img src="./assets/icons/close-circle.svg" alt="Close">
       </div>
