--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
               </div>
 
               <div class="filter_wrapper">
-                <div class="filter">
+                <div class="filter date">
                   <div class="date">
                     <label class="label" for="Date_from">Date from:</label>
                     <div class="date">
@@ -276,6 +276,10 @@
                       <img class="calendar" src="./assets/imgs/calendar.png" alt="calendar">
                     </div>
                   </div>
+                  <div class="tooltip_box1">
+                    <div class="tooltip_hover1">Обновить</div>
+                    <div class="kubik1"></div>
+                  </div>
                   <button class="btn_refresh rounded">
                     <img src="./assets/icons/refresh.svg" alt="refresh">
                   </button>
@@ -283,6 +287,10 @@
 
                 <div class="filter btn_wrapper">
                   <div class="date me-0">
+                    <div class="tooltip_box2">
+                      <div class="tooltip_hover">Поиск</div>
+                      <div class="kubik"></div>
+                    </div>
                     <button class="btn_search rounded">
                       <img src="./assets/icons/filter-svgrepo.svg" alt="Filter">
                     </button>
@@ -509,6 +517,7 @@
     <div class="modal_box rounded">
       <div class="close_btn">
         <img src="./assets/icons/close-circle.svg" alt="Close">
+        <div class="modal_box_title">Qo'shimcha qidiruv</div>
       </div>
 
       <div class="select_wrapper">
