--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
               </div>
 
               <div class="filter_wrapper">
-                <div class="filter date">
+                <div class="filter">
                   <div class="date">
                     <label class="label" for="Date_from">Date from:</label>
                     <div class="date">
@@ -276,13 +276,15 @@
                       <img class="calendar" src="./assets/imgs/calendar.png" alt="calendar">
                     </div>
                   </div>
-                  <div class="tooltip_box1">
-                    <div class="tooltip_hover1">Обновить</div>
-                    <div class="kubik1"></div>
+                  <div class="date">
+                    <div class="tooltip_box1">
+                      <div class="tooltip_hover1">Обновить</div>
+                      <div class="kubik1"></div>
+                    </div>
+                    <button class="btn_refresh rounded">
+                      <img src="./assets/icons/refresh.svg" alt="refresh">
+                    </button>
                   </div>
-                  <button class="btn_refresh rounded">
-                    <img src="./assets/icons/refresh.svg" alt="refresh">
-                  </button>
                 </div>
 
                 <div class="filter btn_wrapper">
