--- a/index.html
+++ b/index.html
@@ -152,9 +152,7 @@
         <div class="saidbar overflow-hidden">
           <ul class="px-2 saidbar_list">
             <li class="saidbar_title">
-              <a class="nav-link" href="#">
-                <span>PERSONAL</span>
-              </a>
+              <span>PERSONAL</span>
             </li>
             <li class="nav-item active second_list">
               <a class="nav-link d-flex align-items-center justify-content-between" href="#">
@@ -201,9 +199,7 @@
               </a>
             </li>
             <li class="saidbar_title">
-              <a class="nav-link" href="#">
-                <span>FORMS, TABLE & LAYOUTS</span>
-              </a>
+              <span>FORMS, TABLE & LAYOUTS</span>
             </li>
             <li class="nav-item">
               <a class="nav-link d-flex align-items-center justify-content-between" href="#">
@@ -257,7 +253,7 @@
           <div class="parent">
             <div class="contentWrapper bg-white m-4">
               <div class="title row w-100 m-0">
-                <div class="col-12 py-3 ps-2 fs-5 border-bottom text-center">Content name</div>
+                <div class="col-12 py-3 ps-2 fs-5 border-bottom">Content name</div>
               </div>
 
               <div class="filter_wrapper">
@@ -586,7 +582,7 @@
 
 
   <!-- Icons -->
-  <script src="./library/js/icons.js" crossorigin="anonymous"></script>
+  <script src="./library/js/icons.js"></script>
 
   <!-- jQuery -->
   <script src="./library/js/jquery-3.7.0.js"></script>
