--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
             <li class="saidbar_title">
               <span>PERSONAL</span>
             </li>
-            <li class="nav-item active second_list">
-              <a class="nav-link d-flex align-items-center justify-content-between" href="#">
+            <li class="nav-item second_list">
+              <a class="nav-link active d-flex align-items-center justify-content-between" href="#">
                 <div class="d-flex align-items-center">
                   <div class="icons">
                     <i class="fa-solid fa-gauge max_icon"></i>
@@ -167,6 +167,26 @@
                 </div>
                 <i class="fa-solid fa-angle-right min_icon"></i>
               </a>
+              <ul class="list_drop">
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Home</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">About</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Services</span>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link d-flex align-items-center justify-content-between" href="#">
