--- a/index.html
+++ b/index.html
@@ -198,6 +198,26 @@
                 </div>
                 <i class="fa-solid fa-angle-right min_icon"></i>
               </a>
+              <ul class="list_drop">
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Home</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">About</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Services</span>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link d-flex align-items-center justify-content-between" href="#">
@@ -209,6 +229,26 @@
                 </div>
                 <i class="fa-solid fa-angle-right min_icon"></i>
               </a>
+              <ul class="list_drop">
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Home</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">About</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Services</span>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link d-flex align-items-center justify-content-between" href="#">
@@ -220,6 +260,26 @@
                 </div>
                 <i class="fa-solid fa-angle-right min_icon"></i>
               </a>
+              <ul class="list_drop">
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Home</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">About</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Services</span>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="saidbar_title">
               <span>FORMS, TABLE & LAYOUTS</span>
@@ -234,6 +294,26 @@
                 </div>
                 <i class="fa-solid fa-angle-right min_icon"></i>
               </a>
+              <ul class="list_drop">
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Home</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">About</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Services</span>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link d-flex align-items-center justify-content-between" href="#">
@@ -245,6 +325,26 @@
                 </div>
                 <i class="fa-solid fa-angle-right min_icon"></i>
               </a>
+              <ul class="list_drop">
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Home</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">About</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Services</span>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link d-flex align-items-center justify-content-between" href="#">
@@ -256,6 +356,26 @@
                 </div>
                 <i class="fa-solid fa-angle-right min_icon"></i>
               </a>
+              <ul class="list_drop">
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Home</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">About</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Services</span>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link d-flex align-items-center justify-content-between" href="#">
@@ -267,6 +387,26 @@
                 </div>
                 <i class="fa-solid fa-angle-right min_icon"></i>
               </a>
+              <ul class="list_drop">
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Home</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">About</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Services</span>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
