--- a/index.html
+++ b/index.html
@@ -202,19 +202,43 @@
                 <li class="item_drop">
                   <a href="#" class="drop_link">
                     <i class="fa-regular fa-circle"></i>
-                    <span class="drop_text">Home</span>
+                    <span class="drop_text">Chat app</span>
                   </a>
                 </li>
                 <li class="item_drop">
                   <a href="#" class="drop_link">
                     <i class="fa-regular fa-circle"></i>
-                    <span class="drop_text">About</span>
+                    <span class="drop_text">Contact / Employee</span>
                   </a>
                 </li>
                 <li class="item_drop">
                   <a href="#" class="drop_link">
                     <i class="fa-regular fa-circle"></i>
-                    <span class="drop_text">Services</span>
+                    <span class="drop_text">Support Ticket</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Calendar</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Profile</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Userlist Grid</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Userlist</span>
                   </a>
                 </li>
               </ul>
@@ -233,19 +257,19 @@
                 <li class="item_drop">
                   <a href="#" class="drop_link">
                     <i class="fa-regular fa-circle"></i>
-                    <span class="drop_text">Home</span>
+                    <span class="drop_text">Inbox</span>
                   </a>
                 </li>
                 <li class="item_drop">
                   <a href="#" class="drop_link">
                     <i class="fa-regular fa-circle"></i>
-                    <span class="drop_text">About</span>
+                    <span class="drop_text">Compose</span>
                   </a>
                 </li>
                 <li class="item_drop">
                   <a href="#" class="drop_link">
                     <i class="fa-regular fa-circle"></i>
-                    <span class="drop_text">Services</span>
+                    <span class="drop_text">Read</span>
                   </a>
                 </li>
               </ul>
@@ -264,19 +288,133 @@
                 <li class="item_drop">
                   <a href="#" class="drop_link">
                     <i class="fa-regular fa-circle"></i>
-                    <span class="drop_text">Home</span>
+                    <span class="drop_text">Badges</span>
                   </a>
                 </li>
                 <li class="item_drop">
                   <a href="#" class="drop_link">
                     <i class="fa-regular fa-circle"></i>
-                    <span class="drop_text">About</span>
+                    <span class="drop_text">Border</span>
                   </a>
                 </li>
                 <li class="item_drop">
                   <a href="#" class="drop_link">
                     <i class="fa-regular fa-circle"></i>
-                    <span class="drop_text">Services</span>
+                    <span class="drop_text">Buttons</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Bootstrap Switch</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">User Card</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Color</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Date Paginator</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Dropdown</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Dropdown Grid</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">General</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Icons</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Advanced Medias</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Modals</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Nestable</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Notification</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Draggable Portlets</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Ribbons</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Sliders</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Sweet Alert</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Tabs</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Timeline</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Horizontal Timeline</span>
                   </a>
                 </li>
               </ul>
@@ -298,19 +436,43 @@
                 <li class="item_drop">
                   <a href="#" class="drop_link">
                     <i class="fa-regular fa-circle"></i>
-                    <span class="drop_text">Home</span>
+                    <span class="drop_text">Blog</span>
                   </a>
                 </li>
                 <li class="item_drop">
                   <a href="#" class="drop_link">
                     <i class="fa-regular fa-circle"></i>
-                    <span class="drop_text">About</span>
+                    <span class="drop_text">Chart</span>
                   </a>
                 </li>
                 <li class="item_drop">
                   <a href="#" class="drop_link">
                     <i class="fa-regular fa-circle"></i>
-                    <span class="drop_text">Services</span>
+                    <span class="drop_text">List</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Social</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Statistic</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Weather</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Widgets</span>
                   </a>
                 </li>
               </ul>
@@ -329,19 +491,19 @@
                 <li class="item_drop">
                   <a href="#" class="drop_link">
                     <i class="fa-regular fa-circle"></i>
-                    <span class="drop_text">Home</span>
+                    <span class="drop_text">Boxed</span>
                   </a>
                 </li>
                 <li class="item_drop">
                   <a href="#" class="drop_link">
                     <i class="fa-regular fa-circle"></i>
-                    <span class="drop_text">About</span>
+                    <span class="drop_text">Fixed</span>
                   </a>
                 </li>
                 <li class="item_drop">
                   <a href="#" class="drop_link">
                     <i class="fa-regular fa-circle"></i>
-                    <span class="drop_text">Services</span>
+                    <span class="drop_text">Collapsed Sidebar</span>
                   </a>
                 </li>
               </ul>
@@ -360,19 +522,25 @@
                 <li class="item_drop">
                   <a href="#" class="drop_link">
                     <i class="fa-regular fa-circle"></i>
-                    <span class="drop_text">Home</span>
+                    <span class="drop_text">Advanced</span>
                   </a>
                 </li>
                 <li class="item_drop">
                   <a href="#" class="drop_link">
                     <i class="fa-regular fa-circle"></i>
-                    <span class="drop_text">About</span>
+                    <span class="drop_text">Basic</span>
                   </a>
                 </li>
                 <li class="item_drop">
                   <a href="#" class="drop_link">
                     <i class="fa-regular fa-circle"></i>
-                    <span class="drop_text">Services</span>
+                    <span class="drop_text">Color</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Group</span>
                   </a>
                 </li>
               </ul>
@@ -391,19 +559,31 @@
                 <li class="item_drop">
                   <a href="#" class="drop_link">
                     <i class="fa-regular fa-circle"></i>
-                    <span class="drop_text">Home</span>
+                    <span class="drop_text">ChartJS</span>
                   </a>
                 </li>
                 <li class="item_drop">
                   <a href="#" class="drop_link">
                     <i class="fa-regular fa-circle"></i>
-                    <span class="drop_text">About</span>
+                    <span class="drop_text">Flot</span>
                   </a>
                 </li>
                 <li class="item_drop">
                   <a href="#" class="drop_link">
                     <i class="fa-regular fa-circle"></i>
-                    <span class="drop_text">Services</span>
+                    <span class="drop_text">Inline charts</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Morris</span>
+                  </a>
+                </li>
+                <li class="item_drop">
+                  <a href="#" class="drop_link">
+                    <i class="fa-regular fa-circle"></i>
+                    <span class="drop_text">Peity</span>
                   </a>
                 </li>
               </ul>
